make api responses consistent
